# scrum-master-3000

./: .env.template  .gitignore  Dockerfile  README.md  docker-compose.yaml  flake.nix  package-lock.json  package.json  pyproject.toml
src/: dev.py  main.py
src/app/: bootstrap.py  config.py  dependencies.py  oidc.py
src/app/routes/: auth.py  root.py  ui.py
src/backend/: bootstrap.py  dependencies.py  oidc.py
src/backend/routes/: auth.py  react.py  root.py  ui.py
src/frontend/entrypoints/: testEntrypoint.tsx
src/scripts/: build.py  dev.py  esbuild.py  tailwind.py
