[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ole-Jakob Olsen", email = "ole.jakob.olsen@ngi.no" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.121.1",
    "htpy>=25.10.0",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
]

[project.scripts]
dev = "dev:main"
main = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
